# BooK-BridgE-IndiA

./: .env.example  .gitignore  .vercelignore  COMPONENTS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  VERCEL_DEPLOY.md  app.js  auth_testing.md  backup_books.json  backup_cart.json  backup_messages.json  backup_orders.json  backup_posts.json  backup_storage_images.json  backup_users.json  build_index.py  build_index2.py  build_index3.py  deployment_report.md  design_guidelines.json  e2e.js  extract_urls.py  firestore.indexes.json  firestore.rules  next.config.js  nixpacks.toml  package-lock.json  package.json  payload.json  poll_deployment.py  pure_wrap.py  pyproject.toml  railway.json  requirements.txt  (+15 more)
.emergent/: emergent.yml
api/: [...path].py  index.py  index_bak.py  requirements.txt  test.py
backend/: Dockerfile  main.py  railway.toml  requirements.txt  server.py  test_books.json  test_books_curl.json  verify_endpoints.py
backend/api/: dependencies.py  router.py
backend/core/: background_jobs.py  cache.py  config.py  database.py  hooks.py  rate_limiter.py  security.py  seed.py
backend/models/: schemas.py
backend/scripts/: backup_supabase.py  create_auth_users.py  create_indexes.py  migrate_to_firebase.py
backend/services/: cloudinary_service.py  email.py  gamification_service.py  notification_service.py  recommendation_engine.py  search_engine.py  (+1 more)
frontend/: fix.js  package-lock.json  package.json
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
(+372 files in other folders)
