[project]
name = "bookbridge-india-api"
version = "1.0.0"
description = "BookBridge India — FastAPI backend for Vercel Serverless"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "python-dotenv==1.1.0",
    "pydantic==2.11.0",
    "email-validator==2.3.0",
    "bcrypt==4.1.3",
    "PyJWT==2.12.1",
    "cryptography==44.0.1",
    "supabase==2.16.0",
]

[tool.uv]
# Vercel provides the Python interpreter; don't try to download a new one during install.
python-downloads = "never"
